cabal-version: 1.12

name:           xbs
version:        0.1.0.0
license:        APACHE2
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md


executable xbs
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , servant
  default-language: Haskell2010

